# my-programming-note

./: .gitignore  README.md  pyproject.toml
doc/source/: build_package.rst  conf.py  index.rst
doc/source/work-17/: index.rst  what_is_pip_install.rst
doc/source/work-18/: index.rst
doc/source/work-18/sub_build_package/: pyproject.rst
doc/source/work-XX_framework/: framework_liblary.rst
doc/source/work-XX_jwt/: index.rst
doc/source/work-xx_texteditor/: popular.rst
docs/: .buildinfo  Makefile  index.html
docs/.doctrees/: environment.pickle
docs/.doctrees/work-17/: index.doctree
docs/.doctrees/work-18/sub_build_package/: directory_config.doctree  flowchart.doctree  (+1 more)
docs/.doctrees/work-XX_jwt/: index.doctree  password_hash.doctree
docs/.doctrees/work-xx_texteditor/: popular.doctree
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/work-17/: embeddable_python.doctree  what_is_pip_install.doctree
docs/doctrees/work-18/: build_package.doctree  coding_package.doctree  index.doctree
docs/doctrees/work-XX_framework/: framework_liblary.doctree  index.doctree
docs/html/: searchindex.js
docs/html/work-17/: embeddable_python.html  index.html
docs/html/work-18/: build_package.html
docs/html/work-XX_framework/: framework_liblary.html  index.html
docs/html/work-XX_jwt/: index.html
docs/html/work-xx_texteditor/: popular.html
docs/work-17/: what_is_pip_install.html
docs/work-18/sub_build_package/: directory_config.html  flowchart.html  gittag.html
docs/work-XX_jwt/: password_hash.html
src/mypkg/first/: first_func.py
(+13 files in other folders)
